arreglar rutas css

--- a/src/styles/_style.scss
+++ b/src/styles/_style.scss
@@ -1,5 +1,5 @@
 @import 'settings';
 @import 'gloval.scss';
-//@import 'normalize.scss';
+@import 'normalize.scss';
 @import 'menu-hamburguesa.scss';
 @import 'menu-hamburguesa-desktop.scss';
