--- a/src/styles/_menu-hamburguesa.scss
+++ b/src/styles/_menu-hamburguesa.scss
@@ -165,7 +165,7 @@ box-shadow: 0 10px 30px 0 rgba($secondary, .8);
     width: 180px;
     border-radius: 4px;
     border: solid 1px rgba($background-opposite, .7);
-    background: url('/public/assets/img/lupa-icon.svg') no-repeat 7px 7px;
+    background: url('../../public/assets/img/lupa-icon.svg') no-repeat 7px 7px;
     background-size: 25px;
     color:$background-opposite;
     background-size: 24px;
